fix(core): migrated to PNPM
Related tickets: re #2664

--- a/.github/actions/setup-node/action.yaml
+++ b/.github/actions/setup-node/action.yaml
@@ -6,21 +6,20 @@ inputs:
     description: 'Version spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.'
     type: string
     required: true
-  npm-install-command:
-    description: 'Custom npm install command to use'
-    type: string
-    required: false
-    default: 'npm ci'
+    default: '22.x'
 
 runs:
   using: 'composite'
   steps:
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+
     - name: Setup Node
       uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4
       with:
         node-version: ${{ inputs.node-version }}
+        cache: 'pnpm'
 
-    - name: Install Node Modules (${{ inputs.npm-install-command }})
-      uses: bahmutov/npm-install@v1
-      with:
-        install-command: ${{ inputs.npm-install-command }}
+    - name: Install dependencies
+      shell: bash
+      run: pnpm install
