--- a/examples/protractor-cucumber/package.json
+++ b/examples/protractor-cucumber/package.json
@@ -35,15 +35,15 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "11.1.1",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/local-server": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/local-server": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/web": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/express": "4.17.21",
     "express": "4.21.2",
