--- a/examples/protractor-jasmine/package.json
+++ b/examples/protractor-jasmine/package.json
@@ -34,15 +34,15 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/jasmine": "^3.0.0",
-    "@serenity-js/local-server": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/jasmine": "workspace:*",
+    "@serenity-js/local-server": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/express": "4.17.21",
     "@types/jasmine": "5.1.5",
