--- a/integration/mocha/package.json
+++ b/integration/mocha/package.json
@@ -28,10 +28,10 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0"
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*"
   },
   "devDependencies": {
     "@types/chai": "4.3.20",
