--- a/integration/protractor-mocha/package.json
+++ b/integration/protractor-mocha/package.json
@@ -28,11 +28,11 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "protractor": "7.0.0"
   },
   "devDependencies": {
