--- a/integration/rest/package.json
+++ b/integration/rest/package.json
@@ -28,13 +28,14 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/local-server": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/local-server": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "axios": "1.7.9",
     "proxy": "2.2.0"
   },
   "devDependencies": {
