--- a/integration/web-specs/package.json
+++ b/integration/web-specs/package.json
@@ -37,14 +37,14 @@
     "express": "4.21.2"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/local-server": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/local-server": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/mocha": "10.0.10",
     "cross-env": "7.0.3",
     "mocha": "11.0.1",
