--- a/integration/webdriverio-8-cucumber/package.json
+++ b/integration/webdriverio-8-cucumber/package.json
@@ -29,15 +29,16 @@
   },
   "dependencies": {
     "@cucumber/cucumber": "10.9.0",
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/webdriverio-8": "^3.0.0",
-    "@wdio/cli": "8.40.6",
-    "@wdio/local-runner": "8.40.6",
-    "@wdio/reporter": "8.40.6",
-    "@wdio/spec-reporter": "8.40.6",
-    "webdriverio": "8.40.6"
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/webdriverio-8": "workspace:*",
+    "@wdio/cli": "8.41.0",
+    "@wdio/local-runner": "8.41.0",
+    "@wdio/reporter": "8.41.0",
+    "@wdio/runner": "8.41.0",
+    "@wdio/spec-reporter": "8.41.0",
+    "webdriverio": "8.41.0"
   },
   "devDependencies": {
     "@types/mocha": "10.0.10",
