--- a/packages/mocha/package.json
+++ b/packages/mocha/package.json
@@ -50,13 +50,13 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2"
+    "@serenity-js/core": "workspace:*"
   },
   "peerDependencies": {
     "mocha": "^10.8.2 || ^11.0.1"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
