--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -57,15 +57,15 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
-    "@serenity-js/web": "3.31.2",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "tiny-types": "1.23.0"
   },
   "peerDependencies": {
     "playwright-core": "~1.49.1"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
