--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -54,9 +54,9 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/assertions": "3.31.2",
-    "@serenity-js/core": "3.31.2",
-    "@serenity-js/rest": "3.31.2",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
     "ansi-regex": "5.0.1",
     "axios": "1.7.9",
     "chalk": "4.1.2",
@@ -67,7 +67,7 @@
     "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "@types/progress": "2.0.7",
