--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -74,9 +74,9 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
-    "@serenity-js/rest": "3.31.2",
-    "@serenity-js/web": "3.31.2",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@wdio/reporter": "9.4.4",
     "deepmerge": "4.3.1",
     "tiny-types": "1.23.0"
@@ -100,7 +100,7 @@
     }
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/mocha": "10.0.10",
     "@wdio/cli": "9.4.5",
     "@wdio/dot-reporter": "9.4.4",
