--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,9 +20,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: npm ci
       - name: Lint
         run: make lint
 
@@ -34,9 +31,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=libs install
       - name: Compile
         run: make COMPILE_SCOPE=libs compile
       - name: Upload compiled libs
@@ -60,9 +54,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -88,7 +79,6 @@ jobs:
         uses: ./.github/actions/setup-node
         with:
           node-version: 20.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -109,7 +99,6 @@ jobs:
         uses: ./.github/actions/setup-node
         with:
           node-version: 18.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -128,9 +117,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -160,9 +146,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -195,9 +178,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -233,9 +213,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -280,9 +257,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       - name: Download compiled libs
         uses: ./.github/actions/download-compressed-artifact
         with:
@@ -319,9 +293,6 @@ jobs:
 
       - name: Set up Node
         uses: ./.github/actions/setup-node
-        with:
-          node-version: 22.x
-          npm-install-command: npm ci
 
       - name: Download all artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3
@@ -392,14 +363,7 @@ jobs:
         run: 7z x -aoa compiled-libs.zip
 
       - name: Set up Node
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4
-        with:
-          node-version: 22.x
-
-      - name: Install Node Modules (root)
-        uses: bahmutov/npm-install@v1
-        with:
-          install-command: npm ci
+        uses: ./.github/actions/setup-node
 
       - name: Publish artifacts
         run: npm run lerna:publish
