--- a/examples/protractor-jasmine-todomvc/package.json
+++ b/examples/protractor-jasmine-todomvc/package.json
@@ -34,14 +34,14 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/jasmine": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/jasmine": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/web": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/jasmine": "5.1.5",
     "jasmine": "5.5.0",
