--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -33,11 +33,11 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "11.1.1",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/webdriverio": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
     "@wdio/cli": "9.4.5",
     "@wdio/globals": "9.4.5",
     "@wdio/local-runner": "9.4.5",
