--- a/examples/webdriverio-mocha-todomvc/package.json
+++ b/examples/webdriverio-mocha-todomvc/package.json
@@ -32,13 +32,13 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/webdriverio": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@wdio/cli": "9.4.5",
     "@wdio/globals": "9.4.5",
     "@wdio/local-runner": "9.4.5",
