--- a/integration/cucumber-11/package.json
+++ b/integration/cucumber-11/package.json
@@ -29,10 +29,10 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "11.1.1",
-    "@integration/testing-tools": "3.0.0",
-    "@integration/cucumber-specs": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@integration/cucumber-specs": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
     "@types/mocha": "10.0.10",
     "@types/chai": "4.3.20",
     "c8": "10.1.3",
