--- a/integration/cucumber-specs/package.json
+++ b/integration/cucumber-specs/package.json
@@ -29,9 +29,9 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
     "@types/mocha": "10.0.10",
     "@types/chai": "4.3.20",
     "mocha": "11.0.1",
