--- a/integration/playwright-web/package.json
+++ b/integration/playwright-web/package.json
@@ -36,15 +36,15 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@integration/web-specs": "3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/playwright": "^3.0.0",
-    "@serenity-js/rest": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@integration/web-specs": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/playwright": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
     "ci-info": "4.1.0",
