--- a/integration/protractor-cucumber/package.json
+++ b/integration/protractor-cucumber/package.json
@@ -29,11 +29,11 @@
   },
   "dependencies": {
     "@cucumber/cucumber": "10.9.0",
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "protractor": "7.0.0"
   },
   "devDependencies": {
