--- a/integration/protractor-web/package.json
+++ b/integration/protractor-web/package.json
@@ -36,15 +36,15 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@integration/web-specs": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/protractor": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@integration/web-specs": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/protractor": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
     "cross-env": "7.0.3",
@@ -52,6 +52,7 @@
     "mocha-multi": "1.1.7",
     "npm-failsafe": "1.3.0",
     "protractor": "^7.0.0",
+    "start-server-and-test": "2.0.9",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
   }
