--- a/integration/webdriverio-8-jasmine/package.json
+++ b/integration/webdriverio-8-jasmine/package.json
@@ -28,14 +28,14 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/jasmine": "^3.0.0",
-    "@serenity-js/webdriverio-8": "^3.0.0",
-    "@wdio/cli": "8.40.6",
-    "@wdio/local-runner": "8.40.6",
-    "@wdio/spec-reporter": "8.40.6",
-    "webdriverio": "8.40.6"
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/jasmine": "workspace:*",
+    "@serenity-js/webdriverio-8": "workspace:*",
+    "@wdio/cli": "8.41.0",
+    "@wdio/local-runner": "8.41.0",
+    "@wdio/spec-reporter": "8.41.0",
+    "webdriverio": "8.41.0"
   },
   "devDependencies": {
     "@types/mocha": "10.0.10",
