--- a/integration/webdriverio-8-web/package.json
+++ b/integration/webdriverio-8-web/package.json
@@ -39,20 +39,20 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@integration/web-specs": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/webdriverio-8": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@integration/web-specs": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/webdriverio-8": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/mocha": "10.0.10",
-    "@wdio/cli": "8.40.6",
-    "@wdio/globals": "8.40.6",
-    "@wdio/local-runner": "8.40.6",
-    "@wdio/spec-reporter": "8.40.6",
+    "@wdio/cli": "8.41.0",
+    "@wdio/globals": "8.41.0",
+    "@wdio/local-runner": "8.41.0",
+    "@wdio/spec-reporter": "8.41.0",
     "c8": "10.1.3",
     "chromedriver": "131.0.4",
     "ci-info": "4.1.0",
@@ -61,7 +61,8 @@
     "mocha": "11.0.1",
     "npm-failsafe": "1.3.0",
     "wdio-chromedriver-service": "8.1.1",
-    "webdriverio": "8.40.6",
+    "webdriverio": "8.41.0",
+    "start-server-and-test": "2.0.9",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
   }
