--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "@cucumber/cucumber": "11.1.1",
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/webdriverio": "workspace:*",
     "@wdio/cli": "9.4.5",
     "@wdio/local-runner": "9.4.5",
     "@wdio/reporter": "9.4.4",
