--- a/integration/webdriverio-mocha/package.json
+++ b/integration/webdriverio-mocha/package.json
@@ -28,10 +28,10 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/webdriverio": "workspace:*",
     "@wdio/cli": "9.4.5",
     "@wdio/globals": "9.4.5",
     "@wdio/local-runner": "9.4.5",
