--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -38,15 +38,15 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@integration/web-specs": "3.0.0",
-    "@serenity-js/assertions": "^3.0.0",
-    "@serenity-js/console-reporter": "^3.0.0",
-    "@serenity-js/core": "^3.0.0",
-    "@serenity-js/mocha": "^3.0.0",
-    "@serenity-js/serenity-bdd": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
-    "@serenity-js/web": "^3.0.0",
+    "@integration/testing-tools": "workspace:*",
+    "@integration/web-specs": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/console-reporter": "workspace:*",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/serenity-bdd": "workspace:*",
+    "@serenity-js/webdriverio": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/mocha": "10.0.10",
     "@wdio/cli": "9.4.5",
     "@wdio/globals": "9.4.5",
@@ -58,6 +58,7 @@
     "mocha": "11.0.1",
     "npm-failsafe": "1.3.0",
     "webdriverio": "9.4.5",
+    "start-server-and-test": "2.0.9",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
   }
