--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@cucumber/messages": "26.0.1",
-    "@serenity-js/core": "3.31.2",
+    "@serenity-js/core": "workspace:*",
     "cli-table3": "0.6.5",
     "gherkin": "5.1.0",
     "tiny-types": "1.23.0"
@@ -70,7 +70,7 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "11.1.1",
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
