--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -75,13 +75,13 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2"
+    "@serenity-js/core": "workspace:*"
   },
   "peerDependencies": {
     "jasmine": "^5.5.0"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
