--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -57,7 +57,7 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
+    "@serenity-js/core": "workspace:*",
     "http-shutdown": "1.2.2",
     "portfinder": "1.0.32"
   },
@@ -83,9 +83,9 @@
   },
   "devDependencies": {
     "@hapi/hapi": "21.3.12",
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "3.31.2",
-    "@serenity-js/rest": "3.31.2",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/express": "4.17.21",
     "@types/hapi": "18.0.14",
