--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -58,9 +58,9 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
-    "@serenity-js/rest": "3.31.2",
-    "@serenity-js/web": "3.31.2",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "deepmerge": "4.3.1",
     "query-selector-shadow-dom": "1.0.1",
     "tiny-types": "1.23.0"
@@ -84,13 +84,13 @@
     }
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "3.31.2",
-    "@serenity-js/cucumber": "3.31.2",
-    "@serenity-js/jasmine": "3.31.2",
-    "@serenity-js/local-server": "3.31.2",
-    "@serenity-js/mocha": "3.31.2",
-    "@serenity-js/web": "3.27.0",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/cucumber": "workspace:*",
+    "@serenity-js/jasmine": "workspace:*",
+    "@serenity-js/local-server": "workspace:*",
+    "@serenity-js/mocha": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/express": "4.17.21",
     "@types/html-minifier": "4.0.5",
