--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -51,7 +51,7 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
+    "@serenity-js/core": "workspace:*",
     "agent-base": "7.1.3",
     "axios": "1.7.9",
     "http-proxy-agent": "7.0.2",
@@ -61,8 +61,8 @@
     "tiny-types": "1.23.0"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
-    "@serenity-js/assertions": "3.31.2",
+    "@integration/testing-tools": "workspace:*",
+    "@serenity-js/assertions": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "axios-mock-adapter": "2.1.0",
