--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -53,12 +53,12 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/assertions": "3.31.2",
-    "@serenity-js/core": "3.31.2",
+    "@serenity-js/assertions": "workspace:*",
+    "@serenity-js/core": "workspace:*",
     "tiny-types": "1.23.0"
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/chai": "4.3.20",
     "@types/mocha": "10.0.10",
     "c8": "10.1.3",
