--- a/packages/webdriverio-8/package.json
+++ b/packages/webdriverio-8/package.json
@@ -74,9 +74,9 @@
     "node": "^18.12 || ^20 || ^22"
   },
   "dependencies": {
-    "@serenity-js/core": "3.31.2",
-    "@serenity-js/rest": "3.31.2",
-    "@serenity-js/web": "3.31.2",
+    "@serenity-js/core": "workspace:*",
+    "@serenity-js/rest": "workspace:*",
+    "@serenity-js/web": "workspace:*",
     "@wdio/reporter": "8.41.0",
     "deepmerge": "4.3.1",
     "tiny-types": "1.23.0"
@@ -100,10 +100,10 @@
     }
   },
   "devDependencies": {
-    "@integration/testing-tools": "3.0.0",
+    "@integration/testing-tools": "workspace:*",
     "@types/mocha": "10.0.10",
     "@wdio/cli": "8.41.0",
-    "@wdio/devtools-service": "8.40.2",
+    "@wdio/devtools-service": "8.41.0",
     "@wdio/dot-reporter": "8.41.0",
     "@wdio/local-runner": "8.41.0",
     "@wdio/spec-reporter": "8.41.0",
