--- a/.github/workflows/pr-commitlint.yaml
+++ b/.github/workflows/pr-commitlint.yaml
@@ -11,10 +11,13 @@ permissions:
 jobs:
   check-commit-messages:
     name: Check commit message format
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
-    with:
-      fetch-depth: 0
-      node-version: 20.x
-      npm-install-command: npm ci
-      command: |
-        npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose >> $GITHUB_STEP_SUMMARY
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          fetch-depth: 0
+      - name: Set up Node
+        uses: ./.github/actions/setup-node
+      - name: Check commit messages
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose >> $GITHUB_STEP_SUMMARY
